# crabviz

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs  rust-toolchain.toml  rustfmt.toml
editors/code/: .eslintrc.json  CHANGELOG.md  LICENSE  README.md  package-lock.json  package.json  tsconfig.json  webpack.config.js
editors/code/assets/: export.js  graph.js  styles.css  toolbar.css  variables.css
editors/code/media/: export.js  graph.js  preprocess.js  styles.css  variables.css
editors/code/src/: command-manager.ts  extension.ts  generator.ts  languages.ts  lspTypesConversion.ts  utils.ts  webview.ts
editors/code/src/utils/: command.ts  file-classifier.ts  ignore.ts  ignores.ts  languages.ts  workspace.ts
editors/code/src/webview/: main.ts
editors/common/media/: styles.css
src/: analysis.rs  cli.rs  config.rs  dot.rs  error.rs  file_structure.rs  generator.rs  graph.rs  lang.rs  lib.rs  lsp_types.rs  main.rs
src/analysis/: file_structure.rs  mod.rs  ra.rs  types.rs
src/app/: analysis.rs  graph.rs  handler.rs  mod.rs
src/app/assets/: path-data-polyfill.min.js  preprocess.js  styles.css  variables.css
src/generator/: tests.rs  types.rs  wasm.rs
src/graph/: dot.rs  mod.rs  types.rs
src/lang/: go.rs  infer.rs  java.rs  mod.rs  rust.rs
src/lsp/: client.rs  message.rs  mod.rs
src/utils/: mod.rs  take_until.rs
