[package]
name = "crabviz"
version = "0.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
snafu = { version = "0.7", features = ["backtraces-impl-std"] }

# graphviz-sys = "0.1"

wasm-bindgen = "0.2"
console_error_panic_hook = { version = "0.1", optional = true }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
serde-wasm-bindgen = "0.5"
