[package]
name = "crabviz"
version = "0.7.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []

vscode = ["wasm", "console_error_panic_hook"]
wasm = []

[dependencies]
# graphviz-sys = "0.1"

wasm-bindgen = "0.2"
console_error_panic_hook = { version = "0.1", optional = true }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
serde-wasm-bindgen = "0.6"
